--- a/sprint3android/app/src/main/AndroidManifest.xml
+++ b/sprint3android/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyCatalog"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CatalogActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
