--- a/sprint3android/app/src/main/AndroidManifest.xml
+++ b/sprint3android/app/src/main/AndroidManifest.xml
@@ -14,10 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".DetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CatalogActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
