Ejercicio 5 dos estilos personalizados.

--- a/sprint4android/app/src/main/AndroidManifest.xml
+++ b/sprint4android/app/src/main/AndroidManifest.xml
@@ -17,15 +17,18 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/CustomTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".DetailActivity"></activity>
+        <activity
+            android:name=".DetailActivity"
+            android:theme="@style/DetailTheme">
+        </activity>
     </application>
 
 </manifest>
